feat: Add possibility to filter out linked WorkItems by role during diffing/merging
Fixes #277