@@ -25,9 +25,9 @@ class DiffModelTest {
 
     private static Stream<Arguments> testValuesForDiffModel() {
         return Stream.of(
-                Arguments.of(null, null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
-                Arguments.of("", null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
-                Arguments.of("some badly formatted string", null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
+                Arguments.of(null, null, List.of(), List.of(), List.of(), List.of()),
+                Arguments.of("", null, List.of(), List.of(), List.of(), List.of()),
+                Arguments.of("some badly formatted string", null, List.of(), List.of(), List.of(), List.of()),
                 Arguments.of(String.format("ok file" +
                                 "-----BEGIN BUNDLE TIMESTAMP-----%1$s" +
                                 "12345%1$s" +
@@ -40,16 +40,22 @@ class DiffModelTest {
                                 "-----END STATUSES TO IGNORE-----%1$s" +
                                 "-----BEGIN HYPERLINK ROLES-----%1$s" +
                                 "[\"ref_int\"]%1$s" +
-                                "-----END HYPERLINK ROLES-----%1$s",
-                        System.lineSeparator()), "12345", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Collections.singletonList("inprogress"), Collections.singletonList("ref_int")),
+                                "-----END HYPERLINK ROLES-----%1$s" +
+                                "-----BEGIN LINKED WORKITEM ROLES-----%1$s" +
+                                "[\"relates_to\"]%1$s" +
+                                "-----END LINKED WORKITEM ROLES-----%1$s",
+                        System.lineSeparator()), "12345", List.of(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), List.of("inprogress"), List.of("ref_int"), List.of("relates_to")),
                 Arguments.of(String.format("no bundle timestamp" +
                                 "-----BEGIN DIFF FIELDS-----%1$s" +
                                 "[{\"key\":\"title\",\"wiTypeId\":\"assumption\"}]" +
                                 "-----END DIFF FIELDS-----%1$s" +
                                 "-----BEGIN STATUSES TO IGNORE-----%1$s" +
                                 "[\"draft\",\"open\"]%1$s" +
-                                "-----END STATUSES TO IGNORE-----%1$s",
-                        System.lineSeparator()), null, Collections.singletonList(DiffField.builder().key("title").wiTypeId("assumption").build()), Arrays.asList("draft", "open"), List.of()),
+                                "-----END STATUSES TO IGNORE-----%1$s" +
+                                "-----BEGIN LINKED WORKITEM ROLES-----%1$s" +
+                                "[\"parent\",\"relates_to\"]%1$s" +
+                                "-----END LINKED WORKITEM ROLES-----%1$s",
+                        System.lineSeparator()), null, List.of(DiffField.builder().key("title").wiTypeId("assumption").build()), List.of("draft", "open"), List.of(), List.of("parent", "relates_to")),
                 Arguments.of(String.format("keep first duplicated entry" +
                                 "-----BEGIN BUNDLE TIMESTAMP-----%1$s" +
                                 "ts1%1$s" +
@@ -75,14 +81,15 @@ class DiffModelTest {
                                 "-----BEGIN HYPERLINK ROLES-----%1$s" +
                                 "[\"ref_int\"]%1$s" +
                                 "-----END HYPERLINK ROLES-----%1$s",
-                        System.lineSeparator()), "ts1", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Arrays.asList("draft", "open"), List.of())
+                        System.lineSeparator()), "ts1", List.of(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), List.of("draft", "open"), List.of(), List.of())
         );
     }
 
     @ParameterizedTest
     @MethodSource("testValuesForDiffModel")
     void getProperExpectedResults(String locationContent, String expectedBundleTimestamp,
-                                  List<DiffField> expectedFields, List<String> expectedStatusesToIgnore, List<String> expectedHyperlinkRoles) {
+                                  List<DiffField> expectedFields, List<String> expectedStatusesToIgnore,
+                                  List<String> expectedHyperlinkRoles, List<String> expectedLinkedWorkItemRoles) {
 
         DiffModel model = new DiffModel();
         model.deserialize(locationContent);
@@ -91,6 +98,7 @@ class DiffModelTest {
         assertEquals(expectedFields, model.getDiffFields());
         assertEquals(expectedStatusesToIgnore, model.getStatusesToIgnore());
         assertEquals(expectedHyperlinkRoles, model.getHyperlinkRoles());
+        assertEquals(expectedLinkedWorkItemRoles, model.getLinkedWorkItemRoles());
     }
 
     @Test
